Renames
- port => endpoint (more common term)
- XxxDescriptor => XxxSpec
- storage => vault
